[gd_scene load_steps=16 format=3 uid="uid://dfjfsbbaplsuc"]

[ext_resource type="Script" path="res://app/app.gd" id="1_6gma5"]
[ext_resource type="Shader" uid="uid://ca2r1u5a8xtb7" path="res://app_scenes/demo_browser/wireframe_sphere/wireframe_sphere_shader.tres" id="2_r1alh"]
[ext_resource type="PackedScene" uid="uid://xiextspg14yi" path="res://screen_fade/screen_fade.tscn" id="2_ybx72"]
[ext_resource type="ArrayMesh" uid="uid://2tkw4vyal8tl" path="res://app_scenes/demo_browser/wireframe_sphere/wireframe_sphere.obj" id="3_07p17"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="4_5i8r8"]
[ext_resource type="PackedScene" uid="uid://b1edcg851ur67" path="res://title_bar/title_bar.tscn" id="5_bbw5b"]
[ext_resource type="FontFile" uid="uid://fbw0uw0pq4hh" path="res://fonts/TitilliumWeb-Bold.ttf" id="8_mbpns"]
[ext_resource type="AudioStream" uid="uid://bvce18ugaoyi3" path="res://loading_screen_loop.wav" id="10_wfgfk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dov8g"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_if15j"]
sky_material = SubResource("ProceduralSkyMaterial_dov8g")

[sub_resource type="Environment" id="Environment_ak7en"]
background_mode = 1
sky = SubResource("Sky_if15j")
tonemap_mode = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s1oy1"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.621524, 0.621524, 0.621524, 0.0588235)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qt4p1"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(0, 0, 0.235294, 0.278431)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ycw7n"]
render_priority = 0
next_pass = SubResource("StandardMaterial3D_qt4p1")
shader = ExtResource("2_r1alh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_whe1o"]
shader = ExtResource("4_5i8r8")
shader_parameter/inner_radius = 0.5
shader_parameter/outer_radius = 0.6
shader_parameter/vignette_strength = 0.25
shader_parameter/dither_strength = 0.1
shader_parameter/vignette_color = Color(0, 0, 0.101961, 1)

[node name="App" type="Node"]
process_mode = 3
script = ExtResource("1_6gma5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ak7en")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 2.85, 17)
fov = 30.0
size = 8.619

[node name="BackgroundGrid" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40)
visible = false
material_override = SubResource("StandardMaterial3D_s1oy1")
skeleton = NodePath("")

[node name="WireframeSphere" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, -49)
material_override = SubResource("ShaderMaterial_ycw7n")
mesh = ExtResource("3_07p17")
skeleton = NodePath("")

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_whe1o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleBar" parent="." instance=ExtResource("5_bbw5b")]

[node name="SceneRoot" type="Node" parent="."]

[node name="ScreenFade" parent="." instance=ExtResource("2_ybx72")]

[node name="BGMAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_wfgfk")

[node name="VersionLabel" type="RichTextLabel" parent="."]
visible = false
z_index = 100
texture_filter = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("8_mbpns")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "0.1.0-dev"
fit_content = true
scroll_active = false
